--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==3.1.0
-Flask-Bcrypt==1.0.1
-Flask-Mail==0.10.0
-Flask-SQLAlchemy==3.1.1
+Flask
+Flask-SQLAlchemy
+Flask-Bcrypt
+Flask-Mail
+python-dotenv
+PyMySQL
