--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-Flask
-Flask-SQLAlchemy
-Flask-Bcrypt
-Flask-Mail
-python-dotenv
-PyMySQL
+Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
+SQLAlchemy==2.0.40
+mysqlclient==2.2.7
+Werkzeug==3.1.3
+Jinja2==3.1.6
+itsdangerous==2.2.0
+click==8.1.8
+Flask-Mail==0.10.0
