--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,6 @@ SQLAlchemy==2.0.40
 typing_extensions==4.13.2
 tzdata==2025.2
 Werkzeug==3.1.3
+google-auth
+google-auth-oauthlib
+google-api-python-client
