--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ SQLAlchemy==2.0.40
 typing_extensions==4.13.2
 tzdata==2025.2
 Werkzeug==3.1.3
-google-auth
-google-auth-oauthlib
-google-api-python-client
+google-auth==2.14.1
+google-auth-oauthlib==0.7.0
+google-auth-httplib2==0.1.0
+google-api-python-client==2.86.0
